<resources>
	<string name="app_name">PetShop</string>

	<!-- Navigation drawer -->
	<string name="nav_drawer_pets">Browse pets</string>
	<string name="nav_drawer_add_pet">Add pet</string>
	<string name="nav_drawer_logout">Logout</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="openDrawer">open_drawer</string>
	<string name="closeDrawer">close_drawer</string>

	<!-- Activity Login -->
	<string name="activity_login_title">Login</string>
	<string name="activity_login_welcome">Welcome to PetShop!</string>
	<string name="activity_login_username_hint">name</string>
	<string name="activity_login_password_hint">password</string>
	<string name="activity_login_login">Login</string>
	<string name="activity_login_empty_fields_error">You must specify a name and password!</string>
	<string name="activity_login_wrong_credentials_error">Wrong credentials!</string>
	<string name="activity_login_username_exists_error">The chosen name is in use. Please specify a different name!</string>
	<string name="activity_login_register">Register</string>

	<!-- Activity Main -->
	<string name="activity_main_title">Main</string>

	<!-- Fragment Pet List -->
	<string name="fragment_pet_list_title">Pets</string>
	<string name="fragment_pet_list_">Pets</string>
	<string name="fragment_pet_list_menu_add_pet">Add pet</string>
	<string name="fragment_pet_list_menu_filter">Filter pets</string>

	<!-- Dialog pet filter -->
	<string name="dialog_pet_filter_title">Filter pets</string>
	<string name="dialog_pet_filter_choose">Choose</string>
	<string name="dialog_pet_filter_cancel">Cancel</string>

	<!-- Fragment Add Pet -->
	<string name="fragment_add_pet_title">Add pet</string>
	<string name="fragment_add_pet_species">species</string>
	<string name="fragment_add_pet_color">color</string>
	<string name="fragment_add_pet_age">age in months</string>
	<string name="fragment_add_pet_price">price</string>
	<string name="fragment_add_pet_add">Add</string>

	<!-- Fragment Pet Detail -->
	<string name="fragment_pet_detail_title">Pet details</string>
	<string name="fragment_pet_detail_detail">details</string>
	<string name="fragment_pet_detail_species">Species:</string>
	<string name="fragment_pet_detail_color">Color:</string>
	<string name="fragment_pet_detail_age">Age:</string>
	<string name="fragment_pet_detail_price">Price:</string>
	<string name="fragment_pet_detail_wrong_detail">Wrong pet detail</string>

	<!-- Global error messages -->
	<string name="network_error">An unknown network error occurred!</string>
	<string name="not_admin_user_erre">You have to be Admin to do that operation!</string>
	<string name="unknown_user_error">Unknown user!</string>
	<string name="unknown_pet_error">Unknown pet detail!</string>
	<string name="offline_with_repository_error">An unknown repository error occured during Offline mode!</string>
	<string name="offline_but_pets_found_from_repo">Showing pet list with Offline mode!</string>
	<string name="offline_and_pet_detail_not_found_from_repo_error">Pet detail not found with Offline mode!</string>
	<string name="offline_but_pet_detail_found_from_repo">Showing pet detail with Offline mode!</string>
</resources>
