<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="hu.bme.xj4vjg.petshop.ui.login.LoginActivity">

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		style="@style/Toolbar"/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginBottom="@dimen/activity_vertical_margin"
		android:layout_marginLeft="@dimen/activity_horizontal_margin"
		android:layout_marginRight="@dimen/activity_horizontal_margin"
		android:layout_marginTop="@dimen/activity_vertical_margin">

		<TextView
			android:id="@+id/welcome_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:layout_marginBottom="@dimen/margin_medium"
			android:text="@string/activity_login_welcome"
			android:textAlignment="center"
			android:textSize="@dimen/text_size_title"
			android:textStyle="bold"/>

		<ImageView
			android:id="@+id/petshop_image_view"
			android:layout_width="@dimen/petshop_image_size"
			android:layout_height="@dimen/petshop_image_size"
			android:layout_below="@id/welcome_text_view"
			android:layout_centerHorizontal="true"
			android:layout_marginBottom="@dimen/margin_large"
			android:src="@drawable/app_icon"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/name_input_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/petshop_image_view"
			android:layout_marginBottom="@dimen/margin_small">

			<EditText
				android:id="@+id/name_edit_text"
				style="@style/EditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/activity_login_username_hint"
				android:imeOptions="actionNext"
				android:inputType="text"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/password_input_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/name_input_layout">

			<EditText
				android:id="@+id/password_edit_text"
				style="@style/EditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/activity_login_password_hint"
				android:imeOptions="actionDone"
				android:inputType="textPassword"/>
		</android.support.design.widget.TextInputLayout>

		<Button
			android:id="@+id/button_register"
			style="@style/Button"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			android:layout_marginBottom="@dimen/margin_small"
			android:text="@string/activity_login_register"/>

		<Button
			android:id="@+id/button_login"
			style="@style/Button"
			android:layout_above="@id/button_register"
			android:layout_centerHorizontal="true"
			android:text="@string/activity_login_login"/>

	</RelativeLayout>
</LinearLayout>
