<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:layout_marginBottom="@dimen/activity_vertical_margin"
			  android:layout_marginLeft="@dimen/activity_horizontal_margin"
			  android:layout_marginRight="@dimen/activity_horizontal_margin"
			  android:layout_marginTop="@dimen/activity_vertical_margin"
			  android:orientation="vertical">

	<ImageView
		android:id="@+id/pet_image_view"
		android:layout_width="@dimen/new_pet_image_size"
		android:layout_height="@dimen/new_pet_image_size"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="@dimen/margin_large"
		android:scaleType="centerCrop"
		android:src="@drawable/app_logo_black_big"/>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/margin_small">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/species_edit_text"
			style="@style/EditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/fragment_add_pet_species"
			android:imeOptions="actionNext"
			android:inputType="text"/>
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/margin_small">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/color_edit_text"
			style="@style/EditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/fragment_add_pet_color"
			android:imeOptions="actionNext"
			android:inputType="text"/>
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/margin_small">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/age_edit_text"
			style="@style/EditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/fragment_add_pet_age"
			android:imeOptions="actionNext"
			android:inputType="number"/>
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/margin_small">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/price_edit_text"
			style="@style/EditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/fragment_add_pet_price"
			android:imeOptions="actionDone"
			android:inputType="number"/>
	</android.support.design.widget.TextInputLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<Button
			android:id="@+id/add_pet_button"
			style="@style/Button"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			android:text="@string/fragment_add_pet_add"/>
	</RelativeLayout>

</LinearLayout>
